fixed centering issues on entire site, removed some test projects fixed spacing issues on test projects

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -192,7 +192,7 @@ $medium-margin: 45px;
 
         #project-grid {
             display: grid;
-            grid-template-columns: auto auto auto;
+            grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: auto auto auto;
             grid-gap: 15px;
             .project-card {
